@@ -45,13 +45,13 @@ namespace MUSIC {
     communicator ();
 
     string
-    config_get_string (string var);
+    config_string (string var);
 
     int
-    config_get_int (string var);
+    config_int (string var);
 
     double
-    config_get_double (string var);
+    config_double (string var);
 
     bool
     is_port (string identifier);
